Primer ear a qa, se quita saml2 y sso con llave

--- a/LandViewController/public_html/indexPage.jspx
+++ b/LandViewController/public_html/indexPage.jspx
@@ -125,7 +125,7 @@
                     <af:spacer width="10" height="10" id="s1"/>
                     <af:panelGroupLayout id="pgl2" layout="horizontal">
                         <af:button text="Aceptar" id="b1"
-                                   action="#{LoginBean.redirectToHome}"/>
+                                   action="#{LoginBean.redirectToHome2}"/>
                         <af:spacer width="10" height="10" id="s3"/>
                         <af:button text="Cancelar" id="b2"
                                    action="#{LoginBean.closeLoginPopup}"/>
