avance para archivos gz

--- a/LandViewController/public_html/indexPage.jspx
+++ b/LandViewController/public_html/indexPage.jspx
@@ -59,7 +59,7 @@
                                          halign="center"
                                          layout="vertical"
                                          inlineStyle="border-style:none;"                                         
-                                         visible="false"><!--SAML2-->
+                                         visible="true"><!--SAML2-->
                             <af:spacer width="10" height="28" id="SpcLogin1"/>
                             <af:panelFormLayout id="PnlFrmLoginMsg" visible="true">
                                 <af:panelGroupLayout id="PnlLoginInfo" valign="top" layout="horizontal">
@@ -135,7 +135,7 @@
                 </af:popup>
 
             </af:form>
-            <af:showPopupBehavior popupId="pSaml2" triggerType="load"/>
+            <!--<af:showPopupBehavior popupId="pSaml2" triggerType="load"/>-->
         </af:document>
     </f:view>
 
